# ray-tracing

./: CMakeLists.txt  Camera.h  HitableList.h  README.md  Ray.h  Sphere.h  Vector3.h  main.cpp
src/: AxisAlignedBoundingBox.h  Camera.h  Hitable.h  HitableList.h  Perlin.h  Random.h  Ray.h  Scenes.h  Sphere.h  Vector3.h  main.cpp
src/hitables/: Box.h  BvhNode.h  ConstantMedium.h  FlippedNormals.h  Hitable.h  HitableList.h  MovingSphere.h  Sphere.h  TwoDRectangle.h
src/hitables/2Drectangles/: XYRectangle.h
src/hitables/modifiers/: FlippedNormals.h  RotateY.h  Translate.h
src/hitables/rectangles/: XZRectangle.h  YZRectangle.h
src/hitables/spheres/: MovingSphere.h  Sphere.h
src/materials/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  Metal.h
src/textures/: CheckerTexture.h  ConstantTexture.h  ImageTexture.h  NoiseTexture.h  Texture.h
